Book no longer wraps to beginning at end. Added disabled end arrow + hover text.

--- a/public/static/css/reader.css
+++ b/public/static/css/reader.css
@@ -247,16 +247,33 @@ section.comments {
 }
 
 .book .book-arrow {
-    /*color: red;*/
-    max-width: 60px;
-    max-height: 60px;
-    background-size: 83% 83%;
-    background-position: center center;
-    background-repeat: no-repeat;
     font-size: 35px;
     color: #444;
     display: flex;
     align-items: center;
+}
+
+.book .book-arrow.btn-disabled {
+    color: #888;
+    cursor: default;
+}
+
+.book .book-arrow .last-page-txt {
+    display: none;
+    text-align: right;
+    font-size: 16px;
+}
+
+.book .book-arrow.btn-disabled:hover .last-page-txt {
+    display: block;
+}
+
+.book .book-arrow.btn-disabled:hover i {
+    display: none;
+}
+
+.book .book-arrow.btn-disabled:hover {
+    cursor: default;
 }
 
 .book .book-arrow:hover {
@@ -272,7 +289,9 @@ section.comments {
     color: #444;
 }
 
-.forward-btn i {
+
+
+.forward-btn * {
     margin-left: auto;
 }
 
